# HooYooTracker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  run-linux-docker.sh  run-linux-standard.sh  run-windows-docker.bat  run-windows-standard.bat  run.bat  update.bat  webapp.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  linting.yml  type_checking.yml
apps/api/: eslint.config.ts  package.json  prettier.config.js  tsconfig.json
apps/api/src/: constants.ts  index.ts  types.ts
apps/api/tests/: routes.codes.test.ts  service.interface.test.ts
apps/web/: index.html  package.json  vitest.config.ts
apps/web/src/: App.tsx  constants.ts  constants.tsx  index.css  main.tsx  types.ts  types.tsx
apps/web/tests/: utils.test.ts
hooyootracker/: __init__.py  __main__.py  _logger.py  constants.py  logger.py
hooyootracker/codeentrieslist/: controller.py  exceptions.py  manager.py
hooyootracker/config/: config.py
hooyootracker/data_processor/: __init__.py  _base.py  _exceptions.py  code_entries_list_controller.py  code_entries_list_manager.py  controller.py  gi.py  manager.py  model.py  presenter.py  zzz.py
hooyootracker/db/: __init__.py  database.py  model.py
hooyootracker/exceptions/: data_processor.py
hooyootracker/extractor/_exceptions/: handler.py
hooyootracker/extractor/gi/: __init__.py  _base.py  _source_url.py  game8.py  pockettactics.py  rockpapershotgun.py  vg247.py
hooyootracker/extractor/zzz/: __init__.py  _source_url.py  game8.py  pockettactics.py  polygon.py  vg247.py
hooyootracker/logging/: logger.py
hooyootracker/scraper/: model.py  scraper.py  source_urls.py
hooyootracker/scraper/_exceptions/: exceptions.py  handler.py
hooyootracker/scraper/gi/: __init__.py  _base.py  game8.py  pockettactics.py  rockpapershotgun.py  vg247.py
hooyootracker/scraper_v2/: model.py
hooyootracker/webapp/: app.py
hooyootracker/website/: app.py
scripts/: start.js
src/genshin_impact/: index.html
src/zenless_zone_zero/: archives.html  index.html
(+69 files in other folders)
