[tool.poetry]
name = "hooyootracker"
version = "0.3.2"
description = "A webapp that retrieves redeemable codes from various sources and organize them"
authors = ["Scoofszlo <scoofszlo@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
requests = "^2.32.3"
flask = "^3.0.3"
waitress = "^3.0.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.67.0"
mypy = "^1.15.0"
types-toml = "^0.10.8.20240310"
types-requests = "^2.32.0.20250306"
types-beautifulsoup4 = "^4.12.0.20250204"
types-waitress = "^3.0.1.20241117"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
