[project]
name = "hooyootracker"
version = "0.3.2"
description = "A webapp that retrieves redeemable codes from various sources and organize them"
authors = [{ name = "Scoofszlo", email = "scoofszlo@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4==0.0.2",
    "flask==3.0.3",
    "requests==2.32.3",
    "toml==0.10.2",
    "waitress==3.0.1",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "tqdm==4.67.0",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-requests>=2.32.0.20250306",
    "types-toml>=0.10.8.20240310",
    "types-waitress>=3.0.1.20241117",
]

[tool.setuptools]
packages = ["hooyootracker"]
